--- a/test.html
+++ b/test.html
@@ -153,11 +153,11 @@
             <h3>🔗 Usage Examples</h3>
             <div id="usageExamples">
                 <h4>HTML:</h4>
-                <pre><code>&lt;img src="http://localhost:3000/images/your-filename.svg" alt="Icon" width="32" height="32" /&gt;</code></pre>
+                <pre><code>&lt;img src="https://ccimageapi.netlify.app/images/your-filename.svg" alt="Icon" width="32" height="32" /&gt;</code></pre>
 
                 <h4>React/JSX:</h4>
                 <pre><code>&lt;img 
-  src="http://localhost:3000/images/your-filename.svg" 
+  src="https://ccimageapi.netlify.app/images/your-filename.svg" 
   alt="Icon"
   width={32} 
   height={32}
@@ -166,7 +166,7 @@
 
                 <h4>CSS:</h4>
                 <pre><code>.icon {
-  background-image: url('http://localhost:3000/images/your-filename.svg');
+  background-image: url('https://ccimageapi.netlify.app/images/your-filename.svg');
   width: 32px;
   height: 32px;
   background-size: contain;
@@ -176,7 +176,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3000';
+        const API_BASE = 'https://ccimageapi.netlify.app';
 
         // Drag and drop functionality
         const uploadArea = document.getElementById('uploadArea');
